# ENvelope-Certified-Offering-and-REcourse

./: .gitignore  DESIGN_DECISIONS.md  Makefile  PROGRESS.md  README.md  _scratch.py  conftest.py  guide.md  pyproject.toml
config/: encore.mplstyle  market.yaml  plant.yaml
data/: README.md
experiments/: build_jobaware_forecast.py  fetch_ercot_prices.py  fetch_nwp_dew.py  fix_paper_F2_figure.py  main_baseline_runs.py  make_figures.py  paper_figures.py  paper_revision_experiments.py  phase0_step_response.py  phase0_supply_sweep.py  phase1_duration.py  phase2_envelope_geometry.py  phase2_envelope_xval.py  phase3_tightening.py  phase4_one_day.py  phase5_weeks.py  phase6_F1_context.py  phase6_F2_table.py  phase6_F3_cdeg.py  phase6_stress.py  preprocess_alibaba_trace.py  preprocess_google_trace.py
notes/: PARKING_LOT.md
paper/: .gitignore  OUTLINE.md  REFS_VERIFIED.md  REVIEW_LOG.md  main.tex  refs.bib
paper/sections/: experiments.tex  introduction.tex  methodology.tex  system_model.tex
results/: REVIEW_PRE_PAPER.md
results/phase0/: SELF_AUDIT.md  energy_closure.csv  parameter_table.csv  parameter_table.md  provenance_step_response.json  provenance_supply_sweep.json  supply_sweep.csv  time_constants.csv
results/phase1/: DURATION_MEMO.md  SELF_AUDIT.md  frontier.csv  key_numbers.json  provenance_duration.json
results/phase2/: ENVELOPE_MEMO.md  (+9 more)
tests/: test_discretization.py  test_duration_lp.py  test_energy_balance.py  test_envelope_geometry.py  test_market.py  test_monotonicity.py  test_params_power.py  test_tightening_fallback.py  test_virtual_input.py
(+91 files in other folders)
